# scarvs

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: demo.ipynb  demo.yaml  example.yaml
scarvs/: __init__.py  info.yaml
scarvs/constants/: README.md  __init__.py  constants.py
scarvs/core/: base.py  general.py  startup.py
scarvs/plotting/: README.md  __init__.py  core.py  plotting_results.py  test.py
scarvs/recipes/: __init__.py  scarvs_run.py  scarvs_setup.py
scarvs/science/: README.md  __init__.py  model.py  radial_velocity.py  sampling.py  test.py
uprv/: info.yaml
uprv/constants/: README.md  __init__.py  constants.py
uprv/core/: __init__.py  base.py  general.py  startup.py
uprv/plotting/: README.md  __init__.py  core.py  test.py
uprv/recipes/: __init__.py  uprv_run.py  uprv_setup.py
uprv/science/: README.md  __init__.py  test.py
