[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["version", "dependencies"]
name = 'scarvs'
authors = [
    {name = 'Neil Cook', email = 'neil.james.cook@gmail.com'},
]
description = 'Statistical tools for Combined Analysis of Radial Velocity Signals'
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = 'LICENSE'}
requires-python = ">=3.9"

[project.urls]
Homepage = 'http://apero.exoplanets.ca'
Repository = 'https://github.com/njcuk9999/scarvs'

[project.scripts]
scarvs_setup = "scarvs:recipes.scarvs_setup.run"
scarvs_run = "scarvs:recipes.scarvs_run.run"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}